# capabilities2

./: .gitignore  AUTHORS  NOTICE  TODO  TODO.md  changelog.md  readme.md
.devcontainer/: Dockerfile  (+1 more)
capabilities2/: CMakeLists.txt  package.xml
capabilities2_executor/: CMakeLists.txt  package.xml  readme.md
capabilities2_executor/config/: executor.yaml
capabilities2_executor/include/capabilities2_executor/: capabilities_executor.hpp  capabilities_file_parser.hpp  capabilities_xml_parser.hpp
capabilities2_executor/launch/: capabilities2_executor.launch.py
capabilities2_executor/src/: capabilities_executor.cpp
capabilities2_fabric/: CMakeLists.txt  package.xml  readme.md
capabilities2_fabric/config/: executor.yaml  fabric.yaml
capabilities2_fabric/docs/: prompt_capability_runner_ex1.md  prompt_occupancy_runner_ex1.md  prompt_plan_runner_ex1.md  prompt_pose_runner_ex1.md  waypoint_runner_ex1.md  waypoint_runner_ex2.md
capabilities2_fabric/include/capabilities2_executor/: capabilities_fabric.hpp  capabilities_file_parser.hpp  capabilities_xml_parser.hpp
capabilities2_fabric/include/capabilities2_fabric/: capabilities_fabric.hpp  capabilities_fabric_client.hpp  capabilities_file_parser.hpp  capabilities_xml_parser.hpp  fabric_client.hpp
capabilities2_fabric/launch/: fabric.launch.py  fabric_composed.launch.py
capabilities2_fabric/plans/: default.xml  navigation_1.xml  navigation_2.xml  prompt_1.xml  prompt_2.xml  prompt_3.xml  prompt_4.xml
capabilities2_fabric/src/: capabilities_fabric.cpp  capabilities_fabric_client_comp.cpp  capabilities_fabric_client_node.cpp  capabilities_fabric_comp.cpp  capabilities_fabric_node.cpp  capabilities_file_parser.cpp  fabric_client.cpp
capabilities2_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
capabilities2_launch/capabilities2_launch/: capabilities2_launch.py
capabilities2_launch/include/capabilities2_launch/: launch_server.hpp
capabilities2_launch/launch/: server.launch.py
capabilities2_launch/launch_server/: launch_process.py  server.py
capabilities2_launch/src/: launch_server.cpp
capabilities2_launch_proxy/: package.xml  readme.md  setup.cfg  setup.py
capabilities2_launch_proxy/capabilities2_launch_proxy/: capabilities_launch_proxy.py
capabilities2_launch_proxy/test/: call_use_launch_runner.py
capabilities2_msgs/: CMakeLists.txt  package.xml  readme.md
capabilities2_msgs/action/: Capability.action  Connections.action  Launch.action  Plan.action
capabilities2_msgs/msg/: Capability.msg  CapabilityCommand.msg  CapabilityConnection.msg  CapabilityEvent.msg  CapabilityResponse.msg  CapabilitySpec.msg  NaturalCapability.msg  Status.msg
capabilities2_msgs/srv/: CancelFabricPlan.srv  ConfigureCapability.srv  GetFabricStatus.srv  Launch.srv  LaunchStart.srv  LaunchStop.srv  RegisterCapability.srv  RegisterProvider.srv  SetFabricPlan.srv  TriggerCapability.srv
capabilities2_runner/: CMakeLists.txt  package.xml  plugins.xml  readme.md
capabilities2_runner/docs/: create_runners.md
capabilities2_runner/include/capabilities2_runner/: action_client_manager.hpp  action_runner.hpp  action_runnerv2.hpp  encap_runner.hpp  launch_runner.hpp  multi_action_runner.hpp  no_trigger.hpp  notrigger_action_runner.hpp  runner_base.hpp  service_runner.hpp  topic_runner.hpp
capabilities2_runner/src/: standard_runners.cpp
capabilities2_runner_audio/: CMakeLists.txt  package.xml  plugins.xml
capabilities2_runner_audio/include/capabilities2_runner_audio/: listen_runner.hpp  speak_runner.hpp
capabilities2_runner_audio/interfaces/: AudioListenRunner.yaml  AudioSpeakRunner.yaml  ListenerLaunchRunner.yaml  ListenerRunner.yaml  SpeakerLaunchRunner.yaml  SpeakerRunner.yaml  audio.yaml  speech_to_text.yaml  text_to_speech.yaml
capabilities2_runner_audio/launch/: listen.launch.py  speak.launch.py
capabilities2_runner_audio/providers/: AudioListenRunner.yaml  AudioSpeakRunner.yaml  ListenerLaunchRunner.yaml  ListenerRunner.yaml  SpeakerLaunchRunner.yaml  SpeakerRunner.yaml
capabilities2_runner_audio/src/: audio_runners.cpp
capabilities2_runner_bt/: CMakeLists.txt  package.xml  plugins.xml  readme.md
capabilities2_runner_bt/include/capabilities2_runner_bt/: bt_factory_runner.hpp  bt_runner_base.hpp
capabilities2_runner_bt/src/: bt_runners.cpp
capabilities2_runner_nav2/: CMakeLists.txt  package.xml  plugins.xml
capabilities2_runner_nav2/include/capabilities2_runner_nav2/: occupancygrid_runner.hpp  robotpose_runner.hpp  waypoint_runner.hpp
capabilities2_runner_nav2/interfaces/: Nav2Runner.yaml  OccupancyGridRunner.yaml  RobotPoseRunner.yaml  WaypointRunner.yaml  follow_waypoints.yaml  map.yaml  nav2.yaml  pose.yaml
capabilities2_runner_nav2/providers/: Nav2LaunchRunner.yaml  Nav2Runner.yaml  OccupancyGridRunner.yaml  RobotPoseRunner.yaml  WaypointRunner.yaml
capabilities2_runner_nav2/src/: nav2_runners.cpp
capabilities2_server/: CMakeLists.txt  package.xml  readme.md
capabilities2_server/config/: capabilities.yaml
capabilities2_server/docs/: register.md  terminal_usage.md
capabilities2_server/include/capabilities2_server/: bond_cache.hpp  capabilities_api.hpp  capabilities_db.hpp  capabilities_server.hpp  db_base.hpp  runner_cache.hpp
capabilities2_server/launch/: capabilities.launch  capabilities2_server.launch.py  server.launch.py  server_composed.launch.py  system.launch.py
capabilities2_server/scripts/: capability_registrar.py
capabilities2_server/src/: capabilities2_server_node.cpp  capabilities_server.cpp  capabilities_server_comp.cpp  capabilities_server_node.cpp
capabilities2_server/test/: call_establish_bond.py  call_get_interfaces.py  call_get_providers.py  call_get_semantic_interfaces.py  call_get_specs.py  call_register_cap.py  call_srvs.py  test.cpp
std_capabilities/: CMakeLists.txt  package.xml
std_capabilities/interfaces/: moveit2.yaml  nav2.yaml
std_capabilities/launch/: empty.launch.py
std_capabilities/providers/: empty.yaml  empty_depend.yaml
std_capabilities2/: CMakeLists.txt  package.xml
std_capabilities2/interfaces/audio/: SpeakerRunner.yaml
(+118 files in other folders)
