<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>capabilities2_launch_proxy</name>
  <version>0.0.1</version>
  <description>ros2 launch proxy to support launching capabilities similar to ros1 capabilities</description>
  <maintainer email="anon">anon</maintainer>

  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>capabilities2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
