<?xml version="1.0"?>
<package>
  <name>capabilities2_msgs</name>
  <version>0.1.0</version>
  <description>
    This package provides message service and action formats for capabilities2 interface
  </description>

  <maintainer email="michael.pritchard@canberra.edu.au">Michael Pritchard</maintainer>
  <maintainer email="mppritchard3@hotmail.com">mik-p</maintainer>

  <author email="michael.pritchard@canberra.edu.au">Michael Pritchard</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
