<?xml version="1.0"?>
<package>
  <name>capabilities2_msgs</name>
  <version>0.1.0</version>
  <description>
    This package provides message service and action formats for capabilities2 interface
  </description>

  <maintainer email="michael.pritchard@canberra.edu.au">Michael Pritchard</maintainer>
  <maintainer email="mppritchard3@hotmail.com">mik-p</maintainer>

  <author email="michael.pritchard@canberra.edu.au">Michael Pritchard</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>actionlib_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
