<?xml version="1.0"?>
<package format="3">
  <name>capabilities2_msgs</name>
  <version>0.1.0</version>
  <description>
    This package provides message service and action formats for capabilities2 interface
  </description>

  <maintainer email="anon@anon.tld">anon</maintainer>
  <maintainer email="anon@anon.tld">anon</maintainer>

  <author email="anon@anon.tld">anon</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
