<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>capabilities2_runner_audio</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kalanaratnayake95@gmail.com">kalana</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>hri_audio_msgs</depend>
  <depend>capabilities2_msgs</depend>
  <depend>capabilities2_runner</depend>

  <!-- system dependency -->
  <depend>tinyxml2</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- interfaces -->
    <capability_interface>
      interfaces/ListenerRunner.yaml
    </capability_interface>

    <capability_interface>
      interfaces/SpeakerRunner.yaml
    </capability_interface>

    <capability_interface>
      interfaces/ListenerLaunchRunner.yaml
    </capability_interface>

    <capability_interface>
      interfaces/SpeakerLaunchRunner.yaml
    </capability_interface>

    <!-- providers -->
    <capability_provider>
      providers/ListenerRunner.yaml
    </capability_provider>

    <capability_provider>
      providers/SpeakerRunner.yaml
    </capability_provider>

    <capability_provider>
      providers/ListenerLaunchRunner.yaml
    </capability_provider>

    <capability_provider>
      providers/SpeakerLaunchRunner.yaml
    </capability_provider>
  </export>
</package>
