<?xml version="1.0"?>
<package format="3">
  <name>capabilities2_server</name>
  <version>0.0.1</version>
  <description>
    Package that implements the capabilities2 service, a successor to capabilities
  </description>

  <maintainer email="michael.pritchard@canberra.edu.au">Michael Pritchard</maintainer>
  <maintainer email="mppritchard3@hotmail.com">mik-p</maintainer>

  <author email="michael.pritchard@canberra.edu.au">Michael Pritchard</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>bondcpp</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_components</depend>
  <depend>capabilities2_msgs</depend>
  <depend>capabilities2_runner</depend>

  <!-- system dependency -->
  <depend>tinyxml2</depend>
  <depend>libsqlite3-dev</depend>
  <depend>uuid</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>capabilities2_launch_proxy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <build_type>ament_python</build_type> -->
  </export>
</package>
